# factufast

./: .gitignore  Dockerfile  README.md  docker-compose.yml  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg
.envs/.local/: .postgres
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
factufast/: conftest.py
factufast/invoices/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
factufast/templates/: 404.html  500.html  base.html  footer.html  nav.html
factufast/templates/account/: login.html  (+6 more)
factufast/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
infra/: compute.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup
invoice/: admin.py  forms.py  functions.py  models.py  urls.py  views.py
invoice/migrations/: 0001_initial.py  0002_invoice_settings_client_clientlogo_client_taxnumber_and_more.py  0003_alter_client_department.py  0004_alter_product_currency.py  0005_alter_product_currency.py  0006_alter_invoice_status.py  0007_alter_invoice_paymentterms.py
invoicing/: asgi.py  settings.py  urls.py  wsgi.py
queries/: extract_data_dicrtionary.sql  extract_data_dictionary.sql
requirements/: base.txt  local.txt  production.txt
templates/: base.html  nav.html
templates/invoice/: clients.html  company-settings.html  create-invoice.html  dashboard.html  index.html  invoice-template.html  invoices.html  login.html  pdf-template.html  products.html
(+30 files in other folders)
