[tool.poetry]
name = "factufast"
version = "0.1.0"
description = "Invoice service"
authors = ["cristian-rincon <cristian.o.rincon.b@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
psycopg2-binary = "^2.9.3"
Pillow = "^9.2.0"
uuid = "^1.30"
requests = "^2.28.1"
django-crispy-forms = "^1.14.0"
pdfkit = "^1.0.0"
crispy-bootstrap5 = "^0.7"
uvicorn = "^0.18.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
